# CMOR438-Spring-2026

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/Unsupervised Learning/DBSCAN/: dbscan_from_scratch.ipynb
examples/Unsupervised Learning/K-means/: kmeans_from_scratch.ipynb
examples/Unsupervised Learning/Label Propogation/: label_propagation_from_scratch.ipynb
examples/Unsupervised Learning/PCA/: pca_from_scratch.ipynb
examples/Unsupervised Learning/SVD/: svd_from_scratch.ipynb
examples/supervised_learning/decision_tree_classifier/: README.md  decision_tree_classifier_tutorial.ipynb
examples/supervised_learning/decision_tree_regressor/: README.md  decision_tree_regressor_tutorial.ipynb
examples/supervised_learning/k_neighbors_classifier/: README.md  k_neighbors_classifier_tutorial.ipynb
examples/supervised_learning/linear_regression/: README.md  linear_regression_tutorial.ipynb
examples/supervised_learning/logistic_regression/: README.md  logistic_regression_tutorial.ipynb
examples/supervised_learning/multilayer_perceptron/: README.md  multilayer_perceptron_tutorial.ipynb
examples/supervised_learning/perceptron/: README.md  (+1 more)
examples/unsupervised_learning/: README.md
src/mlpackage/: __init__.py  metrics.py  preprocess.py
tests/: test_dbscan.py  test_decision_tree.py  test_decision_tree_regressor.py  test_kmeans.py  test_knn.py  test_label_propagation.py  test_linear_regression.py  test_logistic_regression.py  test_mlp.py  test_pca.py  test_perceptron.py  test_smoke.py
(+24 files in other folders)
